--- a/Views/Projects/ManageUserProjectAssignments.cshtml
+++ b/Views/Projects/ManageUserProjectAssignments.cshtml
@@ -11,12 +11,6 @@
                     <div class="card-header">
                         <h3 class="card-title">@ViewBag.CardTitle</h3>
                         <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            @*<button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                                <i class="fas fa-times"></i>
-                            </button>*@
                         </div>
                     </div>
                     <div class="card-body">
@@ -66,12 +60,6 @@
                     <div class="card-header">
                         <h3 class="card-title"></h3>
                         <div class="card-tools">
-                            @*<button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                                <i class="fas fa-times"></i>
-                            </button>*@
                         </div>
                     </div>
                     <div class="card-body">
@@ -113,7 +101,7 @@
                     </div>
                     <!-- /.card-body -->
                     <div class="card-footer">
-                        
+
                     </div>  <!-- /.card-footer-->
                 </div>  <!-- /.card -->
             </div>
@@ -122,7 +110,23 @@
 
     </div>
 }
-    
 
 
-    
+@section scripts {
+    <script>
+        $(function () {
+            $("table").DataTable(
+                 //   {"responsive": true,
+                 //  "autoWidth": false,
+                //    "paging": true,
+                //    "lengthChange": false,
+                //    "searching": false,
+                //    "ordering": true,
+                //    "info": true
+                //}
+            );
+
+        });
+    </script>
+}
+
