--- a/Views/TicketComments/Edit.cshtml
+++ b/Views/TicketComments/Edit.cshtml
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <!-- New Card row -->
-            <div class="col-8">
+            <div class="col-8 offset-2">
                 <div class="card card-ticket">
                     <div class="card-header">
                         <h3 class="card-title">Edit Ticket Comment</h3>
