--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,17 +30,17 @@
         @Html.AntiForgeryToken()
 
         <div class="login-box">
-            <div class="login-logo">
-                @*<a href="../../index2.html"><b>Dr. d'Bug</b></a>*@
+            <div class="login-logo">               
                 <i class="fas fa-user-md fa-3x"></i>
                 <h2>Dr. d'Bug</h2>
             </div>
             <!-- /.login-logo -->
             <div class="card card-danger">
+                <div class="card-header">
+                    <h3 class="card-title">Sign in</h3>
+                    <div class="card-tools"></div>
+                </div>
                 <div class="card-body login-card-body">
-                    <p class="login-box-msg">Sign in</p>
-
-                    @*<form action="../../index3.html" method="post">*@
                     <div class="input-group mb-3">
                         <input type="email" name="email" class="form-control" placeholder="Email">
                         <div class="input-group-append">
@@ -61,32 +61,36 @@
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                     <div class="row">
-                        <div class="col-8">
+                        @*<div class="col-8">
 
-                        </div>
+                </div>*@
                         <!-- /.col -->
-                        <div class="col-4">
+                        <div class="col-4 offset-8">
                             <button type="submit" class="btn btn-danger btn-block">Sign In</button>
                         </div>
                         <!-- /.col -->
                     </div>
+               
+                </div>
+                <!-- /.login-card-body -->
+                <div class="card-footer">
                     <div class="row">
-                        <div class="col">
-                            @Html.ActionLink("Forgot your password?", "ForgotPassword", "Account")
+                        <div class="col-10">
+                            @Html.ActionLink(" Forgot your password? ", "ForgotPassword", "Account")
+                            @*@Html.ActionLink(" Forgot your password? ", "ForgotPassword", "Account", null, new { @class = "form-control, btn, btn-wide, btn-danger" })*@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-8">
                             @Html.ActionLink("Register as a new user", "Register", "Account")
-                        </div>                        
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col">
+                        <div class="col-8">
                             @Html.ActionLink("Sign on as demo user", "DemoLogin", "Account")
                         </div>
                     </div>
                 </div>
-                <!-- /.login-card-body -->
             </div>
         </div>
 
