--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -21,7 +21,7 @@
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    <hr />
+                    
                     <div class="row">
                         <div class="col-6">
                             @if (User.IsInRole("Admin"))
@@ -44,7 +44,7 @@
                     <div class="row">
                         <div class="col">
                             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label" })
-                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.TextArea("Description", new { @class = "form-control rows = 50, cols = 40" })
                             @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
 
                         </div>
