--- a/Views/Projects/ManageProjectUserAssignments.cshtml
+++ b/Views/Projects/ManageProjectUserAssignments.cshtml
@@ -12,12 +12,6 @@
                     <div class="card-header">
                         <h3 class="card-title">@ViewBag.CardTitle</h3>
                         <div class="card-tools">
-                            <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            @*<button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                                <i class="fas fa-times"></i>
-                            </button>*@
                         </div>
                     </div>
                     <div class="card-body">
@@ -68,11 +62,11 @@
                         <h3 class="card-title"></h3>
                         <div class="card-tools">
                             @*<button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                <i class="fas fa-minus"></i>
-                            </button>
-                            <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
-                                <i class="fas fa-times"></i>
-                            </button>*@
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
+                                    <i class="fas fa-times"></i>
+                                </button>*@
                         </div>
                     </div>
                     <div class="card-body">
@@ -98,9 +92,9 @@
                                             @Html.DisplayFor(model => project.Name)
                                         </td>
                                         <td>
-                                            
+
                                             @project.ProjectManagerName;
-                                           
+
                                         </td>
                                         <td>
                                             @foreach (var user in project.ProjectMembers)
@@ -115,17 +109,29 @@
                         </table>
                     </div>
                     <!-- /.card-body -->
-                    <div class="card-footer">
-                       
-                    </div>  <!-- /.card-footer-->
+                    <div class="card-footer"> </div>  <!-- /.card-footer-->
                 </div>  <!-- /.card -->
             </div>
         </div> <!-- (New Card row) -->
-
-
     </div>
 }
-    
+
+@section scripts {
+    <script>
+        $(function () {
+            $("table").DataTable(
+                 //   {"responsive": true,
+                 //  "autoWidth": false,
+                //    "paging": true,
+                //    "lengthChange": false,
+                //    "searching": false,
+                //    "ordering": true,
+                //    "info": true
+                //}
+            );
+
+        });
+    </script>
+}
 
 
-    
