--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -3,66 +3,71 @@
 
     <div class="container">
         <div class="row">
-            <!-- New Card row -->           
-            @*<div class="col-8">*@               
+            <!-- New Card row -->      
                 <div class="col-8 offset-2">
                     <div class="card card-ticket">
                         <div class="card-header">
                             <h4 class="card-title">@ViewBag.CardTitle</h4>
                             <div class="card-tools">
-                                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
                             </div>
                         </div>
                         @using (Html.BeginForm("Create", "Tickets", FormMethod.Post))
                         {
                             @Html.AntiForgeryToken()
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="card-body">                               
-                                    <div class="row">
-                                        <div class="col-5">
-                                            @*I don't want to give Submitter the option of chosing the project if navigation is from the project*@
-                                            @if (Model.ProjectId == 0)
-                                            {
-                                                @Html.DropDownList("ProjectId", null, "Select Project", new { @class = "form-control" })
-                                                @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
-                                            }
-                                            else
-                                            {
-                                                @Html.HiddenFor(m => Model.ProjectId)
-                                                var db = new ApplicationDbContext();
-                                                var projName = db.Projects.Find(Model.ProjectId).Name;
-                                                <p> @projName</p>
-                                            }
+                            <div class="card-body"> 
+                                <div class="row">
+                                    @*I don't want to give Submitter the option of chosing the project if navigation is from the project*@
+                                    @if (Model.ProjectId == 0)
+                                    {
+                                        <div class="col-2">
+                                            @Html.Label("Project:")
                                         </div>
-                                    </div>
-                                    <div class="row">
                                         <div class="col-5">
-                                            @Html.DropDownList("TicketPriorityId", null, "Select Priority", new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(model => model.TicketPriorityId, "", new { @class = "text-danger" })
+                                            @Html.DropDownList("ProjectId", null, "Select Project", new { @class = "form-control" })
                                         </div>
+
+                                        @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
+                                    }
+                                    else
+                                    {
+                                        @Html.HiddenFor(m => Model.ProjectId)
+
+                                    }
+
+                                </div>
+                                <div class="row p-1">
+                                    <div class="col-2">@Html.Label("Title:")</div>
+                                    <div class="col-10">
+                                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                                     </div>
-                                    <div class="row">
+
+                                   
+
+
+                                </div>
+                                <div class="row p-1">
+                                    <div class="col-2">
+                                        @Html.Label("Priority: ")
+                                    </div>
+                                    <div class="col-4">
+                                        @Html.DropDownList("TicketPriorityId", null, "Select Priority", new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.TicketPriorityId, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-1">
+                                        @Html.Label("Type: ")
+                                    </div>
+                                    
                                         <div class="col-5">
                                             @Html.DropDownList("TicketTypeId", null, "Select Type", new { @class = "form-control" })
                                             @Html.ValidationMessageFor(model => model.TicketTypeId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
+                                
                                     
-                                    <div class="row">
-                                        <div class="col">
-                                            <br />
-                                            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label" })
-                                        </div>
-                                        <br />
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-6">                                           
-                                            @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                                            @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
+                                    
+                                    
                                     
                                 <div class="row">
                                     <div class="col">
